# NVE-Data-analytics-project

./: .env  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
src/source/: Dockerfile  nve_source_db.sql  prestart.sh  pyproject.toml
src/source/db/: nve_db.sql  nve_source_db.sql
src/source/load/: database.py  load_config.py  main.py  test.py
src/source/load/elspots/: elspots.csv
src/source/load/jnotebook/: info_magasinstatistikk.ipynb  test_load_magasinstatistikk.ipynb
src/source/load/logs/config/: __init__.py  config.yml  formatters.py
src/source/load/utils/: prepare_models.py  utils.py
src/source/logs/: logger.py
src/source/logs/config/: __init__.py  config.yml
src/transform/: Dockerfile  dbt_project.yml  elt_script.py
src/transform/macros/: aggregation_macros.sql
src/transform/models/nve_reservoir/staging/: stg_nve_reservoir__areas.sql  stg_nve_reservoir__dates.sql  stg_nve_reservoir__reservoir_measures.sql  stg_nve_reservoir__reservoir_measures_aggregated.sql
src/transform/nve_statistics_transform/: dbt_project.yml  dependencies.yml
src/transform/nve_statistics_transform/macros/: aggregation_macros.sql
src/transform/nve_statistics_transform/models/nve_reservoir/marts/: average_metrics_reservoir_measures.sql  reservoir_measures.sql  reservoir_measures_dates.sql  reservoir_measures_metrics_for_areas.sql
src/transform/nve_statistics_transform/models/nve_reservoir/staging/: _nve_reservoir__sources.yml  stg_nve_reservoir__areas.sql  stg_nve_reservoir__dates.sql  stg_nve_reservoir__reservoir_measures.sql  stg_nve_reservoir__reservoir_measures_metrics.sql
src/transform/nve_statistics_transform/snapshots/: area.yml
src/transform/snapshots/: area.yml
